# Sandbox

./: 2  bb123  dsa01.py  file_logger.cpp  general.c  genlib  learntest2.cpp  lt123  main  math_game.cpp  ml123  mytest  node.h  singleton.cpp  st123  test123
dbservice01/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
linux/cmd_service_test/: CMakeLists.txt  Commands  app  commands.hpp  engine.hpp  gethostips.sh  getips.sh  getmacs.sh  hostips.txt  iplist.txt  lib  lib.hpp  main.cpp  nmap_address  nuuid.sh  server  test  test.cpp  test123  tests
linux/cmd_service_test/example_commands/: nuuid.sh
linux/commander/: DEV.go  af_podcasts.sh  af_podcasts_20260314_0821.db  alpha2.go  app.go  chain.txt  chain_1.txt  chain_2.txt  chain_3.txt  cmder  cmdio.go  command.go  commander.go  containerize.go  daily_readings.sh  dev.go  dev2.go  docs.go  ex1.txt  execute.go  go.mod  go.sum  lineage.go  linlog_2.txt  proc.txt  reading_output_1.txt  reading_output_2.txt  reading_output_3.txt  readings_data.txt  runner.go  security.go  service.go  store.go  test.go  testcmd1.db  testcmd2.db  testcmd3.db  testcmd4.db  testcmd5.db  web.go
linux/common/: commands.hpp  lib.hpp  test.cpp  test123
linux/go-app01/: go.mod
linux/go-common-old/: go.mod  main.go  test1.db
random/: bb1  bitsandbolts.cpp  bitsandbolts.s  cutmerod.py  cutmyrod2.py  dhtpi5.py  dsa02.py  learn  learntest1.cpp  learntest2.s  lib.c  libtest  m1  main.cpp  main1  maintest  memlearn.c  memlearn.s  memlearn02.c  memlearn02.s  sizetest1.c  st1  test.cpp  test.py  test1  test2
(+27 files in other folders)
